[package]
name = "deadwood"
version = "0.1.4"
edition = "2021"
authors = ["Frank Stallion frank.stallion@ojefe.com"]
description = "Gin Rummy TUI featuring full knock, gin, and undercut rules with an algorithmic bot opponent."
license = "MIT"
readme = "README.md"
keywords = ["gin-rummy", "tui", "game", "terminal"]
categories = ["games", "command-line-utilities"]

[[bin]]
name = "deadwood"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = "0.26"
itertools = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
